fix: resolve overflow issues on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   transition: 0.2s ease-in-out all;
+  overflow-x: hidden;
 }
 
 html {
